force-app/main/default/objects/Risk__c/Risk__c.object-meta.xml
<CustomObject>
    <label>Risk Management</label>
    <nameField>
        <label>Risk Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Risk Management</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>