force-app/main/default/objects/Risk__c/fields/Impact_Rating__c.field-meta.xml
<CustomField>
    <fullName>Impact_Rating__c</fullName>
    <label>Impact Rating</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Minor</fullName>
            </value>
            <value>
                <fullName>Moderate</fullName>
            </value>
            <value>
                <fullName>Major</fullName>
            </value>
            <value>
                <fullName>Extreme</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>