force-app/main/default/objects/Risk__c/fields/Likelihood_Rating__c.field-meta.xml
<CustomField>
    <fullName>Likelihood_Rating__c</fullName>
    <label>Likelihood Rating</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unlikely</fullName>
            </value>
            <value>
                <fullName>Possible/Occasional</fullName>
            </value>
            <value>
                <fullName>Likely</fullName>
            </value>
            <value>
                <fullName>Highly Likely</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>