force-app/main/default/objects/Risk__c/fields/Risk_Rating__c.field-meta.xml
<CustomField>
    <fullName>Risk_Rating__c</fullName>
    <formula>IF(ISBLANK(TEXT( Impact_Rating__c )),null, 

IMAGE( 

CASE(TEXT( Impact_Rating__c ), 

&quot;Extreme&quot;, 

CASE(TEXT(  Likelihood_Rating__c ), 

&quot;Unlikely&quot;, $Setup.Icons__c.Yellow__c, 
&quot;Possible/Occasional&quot;,$Setup.Icons__c.Orange__c, 
&quot;Likely&quot;,$Setup.Icons__c.Red__c, 
&quot;Highly Likely&quot;,$Setup.Icons__c.Red__c, 
&quot;&quot;), 

&quot;Major&quot;, 

CASE(TEXT( Likelihood_Rating__c ), 

&quot;Unlikely&quot;, $Setup.Icons__c.Yellow__c, 
&quot;Possible/Occasional&quot;,$Setup.Icons__c.Orange__c, 
&quot;Likely&quot;,$Setup.Icons__c.Orange__c, 
&quot;Highly Likely&quot;,$Setup.Icons__c.Red__c, 
&quot;&quot;), 

&quot;Moderate&quot;, 

CASE(TEXT( Likelihood_Rating__c ), 

&quot;Unlikely&quot;, $Setup.Icons__c.Green__c , 
&quot;Possible/Occasional&quot;,$Setup.Icons__c.Yellow__c, 
&quot;Likely&quot;,$Setup.Icons__c.Orange__c, 
&quot;Highly Likely&quot;,$Setup.Icons__c.Orange__c, 
&quot;&quot;), 

&quot;Minor&quot;, 

CASE(TEXT( Likelihood_Rating__c ), 

&quot;Unlikely&quot;, $Setup.Icons__c.Green__c, 
&quot;Possible/Occasional&quot;,$Setup.Icons__c.Green__c, 
&quot;Likely&quot;,$Setup.Icons__c.Yellow__c, 
&quot;Highly Likely&quot;,$Setup.Icons__c.Yellow__c, 
&quot;&quot;), 
&quot;&quot;), 
&quot;&quot;) 
)</formula>
    <label>Risk Rating</label>
    <type>Text</type>
</CustomField>